# hgsdlc

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml  plan.md
backend/: .project  build.gradle.kts  gradlew  pyproject.toml  settings.gradle.kts
backend/src/main/resources/: application-local.yml  application.yml
backend/src/main/resources/db/changelog/: 001-auth-tables.sql  003-rules.sql  004-skills.sql  009-idempotency.sql  010-rules-simplify.sql  011-skills-simplify.sql  012-flows.sql  013-coding-agent.sql  014-flows-update.sql  015-rules-description.sql  016-projects.sql  017-runtime.sql  018-settings.sql  019-flow-runtime-settings.sql  020-runtime-rework-instruction.sql  021-audit-indexes.sql  (+31 more)
backend/src/main/resources/rule-templates/: claude.md  cursor.md  gigacode.md  platform-native.md  qwen.md
backend/src/main/resources/runtime/: ask-prompt-template.en.md  ask-prompt-template.ru.md  prompt-template.md  prompt-texts.en.yaml  prompt-texts.ru.yaml  publish-commit-message-template.txt  publish-pr-body-template.md
backend/src/main/resources/schemas/: flow.schema.json  node-ai.schema.json  node-command.schema.json  node-human-approval-gate.schema.json  node-human-input-gate.schema.json  node-terminal.schema.json  rule.schema.json  skill.schema.json
backend/src/main/resources/skill-templates/: claude.md  cursor.md  gigacode.md  platform-native.md  qwen.md
backend/src/test/resources/: application-test.yml
backend/src/test/resources/fixtures/: complex-flow.md  multi-phase-flow.md  simple-flow.md  simple-skill.md
(+845 files in other folders)
