[project]
name = "human-guided-sdlc"
version = "0.1.0"
description = "Human-guided software development lifecycle management"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
